--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,27 @@
-openai 
-SpeechRecognition 
-gtts 
-playsound 
-pyaudio 
+streamlit
+gtts
+sounddevice
+soundfile
+deep_translator
+cryptography
 groq
+audio_recorder_streamlit
+python-dotenv
+cryptography
+requests
+pydub
+pipwin
+scipy
+streamlit
+streamlit-audiorec
+streamlit-authenticator
+streamlit-option-menu
+extra-streamlit-components
+pydub
+deepgram-sdk
+PyYAML
+toml
+psycopg2-binary
+Pillow
+python-dateutil
+langdetect
